"Fixed" long starting time. Added stop thread if when program stops. Fixed null FileOpener. Refactored dark.css.